tests/cpp/internal/negative_case/static_assert_consteval_false.cpp
consteval bool foo(int x) {
    return x > 5;
}

static_assert(foo(4), "consteval negative static_assert should fail");

int main() {
    return 0;
}
